<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <GVL Name="Persist" Id="{53adf79c-a467-46a8-91b3-0e259d268fbf}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL  PERSISTENT 
    PersistentStruct:Persistent_Typ;
END_VAR 
]]></Declaration>
  </GVL>
</TcPlcObject>